--- a/tips.html
+++ b/tips.html
@@ -164,9 +164,9 @@
                             </ul>  
                         </div>  
                     </div>  
-                    <div class="col-xl-3 col-md-3 col-sm-12" style="color: white;">  
+                    <div class="col-md-3 col-sm-6" style="color: white;">  
                         <div class="footer-pad mt-3">
-                            <h3>Our social Networks</h3>
+                            <h3>Social Links</h3>
                             <nav>
                                 <ul class="list-inline" style="text-align: center;">
                                     <li class="list-inline-item"><a href="#"><i class="bi bi-twitter"></i></a></li>
