--- a/tips.html
+++ b/tips.html
@@ -127,68 +127,68 @@
           </div>
         </div>
     </div>
-     <!--footer start-->
-    <footer class="footer mt-5">  
-        <div class="footer-middle">  
-            <div class="container">  
-                <div class="row">  
-                    <div class="col-md-3 col-sm-6">  
-                        <div class="footer-pad mt-3">  
-                            <h3>EduGuide</h4>  
-                            <ul class="list-unstyled">  
-                                <li><a href="#"></a></li>  
-                                <img src="image/star_logo.png" alt="" width="100px">
-                            </ul>  
-                            
-                        </div>  
-                    </div>  
-                    <div class="col-md-3 col-sm-6">  
-                        <div class="footer-pad mt-3">  
-                            <h3>Useful links</h3>  
-                            <ul class="list-unstyled">  
-                                <li><a href="index.html">Home</a></li>  
-                                <li><a href="aboutus.html">About us</a></li>  
-                                <li><a href="subjects.html">IGCSE Subjects</a></li>
-                                <li><a href="career.html">Services</a></li> 
-                                <li><a href="references.html">References</a></li>   
-                            </ul>  
-                        </div>  
-                    </div>  
-                    <div class="col-md-3 col-sm-6">  
-                        <div class="footer-pad mt-3">  
-                            <h3>Legal</h3>  
-                            <ul class="list-unstyled">  
-                                <li><a href="">Privacy Policy</a></li>  
-                                <li><a href="">Terms of Service</a></li>  
-                                <li><a href="">Cookie Policy</a></li>  
-                            </ul>  
-                        </div>  
-                    </div>  
-                    <div class="col-md-3 col-sm-6" style="color: white;">  
-                        <div class="footer-pad mt-3">
-                            <h3>Social Links</h3>
-                            <nav>
-                                <ul class="list-inline" style="text-align: center;">
-                                    <li class="list-inline-item"><a href="#"><i class="bi bi-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="bi bi-facebook"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="bi bi-linkedin"></i></a></li>
-                                </ul>
-                            </nav>
-                        </div>          
-                    </div>  
-                </div>  
-            <div class="row">  
-                <div class="col-md-12 copy">  
-                    <p class="text-center">© Copyright 2024. All rights reserved. Developed by Eclipse.</p>  
-                </div>  
-            </div>  
-        </div>  
-    </div>  
-    </footer>  
-    <!--footer end-->
-    <!--back to top button-->
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up-short"></i></button>
-    <script src="userpage.js"></script>
-    <script src="majors.js"></script>
+            <!--footer start-->
+        <footer class="footer mt-5">  
+          <div class="footer-middle">  
+              <div class="container">  
+                  <div class="row">  
+                      <div class="col-md-3 col-sm-6">  
+                          <div class="footer-pad mt-3">  
+                              <h4>EduGuide</h4>  
+                              <ul class="list-unstyled">  
+                                  <li><a href="#"></a></li>  
+                                  <img src="image/star_logo.png" alt="" width="100px">
+                              </ul>  
+                              
+                          </div>  
+                      </div>  
+                      <div class="col-md-3 col-sm-6">  
+                          <div class="footer-pad mt-3">  
+                              <h4>Useful links</h4>  
+                              <ul class="list-unstyled">  
+                                  <li><a href="userpage.html">Home</a></li>  
+                                  <li><a href="about.html">About us</a></li>  
+                                  <li><a href="subjects.html">IGCSE Subjects</a></li>
+                                  <li><a href="career.html">Services</a></li>
+                                  <li><a href="references.html">References</a></li>       
+                              </ul>  
+                          </div>  
+                      </div>  
+                      <div class="col-md-3 col-sm-6">  
+                          <div class="footer-pad mt-3">  
+                              <h4>Legal</h4>  
+                              <ul class="list-unstyled">  
+                                  <li><a href="">Privacy Policy</a></li>  
+                                  <li><a href="">Terms of Service</a></li>  
+                                  <li><a href="">Cookie Policy</a></li>  
+                              </ul>  
+                          </div>  
+                      </div>  
+                      <div class="col-md-3 col-sm-6" style="color: white;">  
+                          <div class="footer-pad mt-3">
+                              <h4>Social Links</h4>
+                              <nav>
+                                  <ul class="list-inline">
+                                      <li class="list-inline-item ms-2"><a href="#"><i class="bi bi-twitter"></i></a></li>
+                                      <li class="list-inline-item ms-3"><a href="#"><i class="bi bi-facebook"></i></a></li>
+                                      <li class="list-inline-item ms-3"><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                                  </ul>
+                              </nav>
+                          </div>          
+                      </div>  
+                  </div>  
+              <div class="row">  
+                  <div class="col-md-12 copy">  
+                      <p class="text-center">© Copyright 2024. All rights reserved. Developed by EduGuide.</p>  
+                  </div>  
+              </div>  
+          </div>  
+      </div>  
+      </footer>  
+      <!--footer end-->
+        <!--back to top button-->
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up-short"></i></button>
+        <script src="userpage.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
